@@ -290,7 +290,7 @@
           <includes>
             <include>**/*Test.java</include>
           </includes>
-          <excludedGroups>integration,benchmark</excludedGroups>
+          <excludedGroups>integration</excludedGroups>
         </configuration>
       </plugin>
 
@@ -304,7 +304,6 @@
             <include>**/*Test.java</include>
           </includes>
           <groups>integration</groups>
-          <excludedGroups>benchmark</excludedGroups>
         </configuration>
         <executions>
           <execution>
@@ -355,26 +354,6 @@
   </build>
 
   <profiles>
-    <profile>
-      <id>benchmarks</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${surefire.version}</version>
-            <configuration>
-              <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar -XX:+EnableDynamicAgentLoading</argLine>
-              <includes>
-                <include>**/*Test.java</include>
-              </includes>
-              <groups>benchmark</groups>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
     <profile>
       <id>open-local-cluster-windows</id>
       <activation>
